<resources>
    <string name="app_name">Time counter</string>
    <string name="label_active_timers">Timers ativos: %1$d</string>
    <string name="label_inactive_timers">Timers inativos: %1$d</string>
    <string name="label_no_item_to_show">Nenhum item disponível..</string>
    <string name="content_desc_fab_add">Adicionar novo evento</string>
    <string name="label_event_title">Título do evento</string>
    <string name="hint_event_title">Título do evento</string>
    <string name="label_define_date">Definir data</string>
    <string name="label_define_time_optional">Definir horário (opcional)</string>
    <string name="label_enable_notification">Ativar lembrete</string>
    <string name="label_save">Salvar</string>
    <string name="error_empty_field">Campo obrigatório</string>
    <string name="extra_key_event">EXTRA_KEY_EVENT</string>
    <string name="toast_slecet_date">Selecione uma data</string>
    <string name="label_days_hours_minutes_seconds">"%1$d: %2$d: %3$d: %4$d"</string>
    <string name="label_details">Detalhes</string>
    <string name="label_delete">Deletar</string>
    <string name="label_no_time">00:00:00</string>
    <string name="extra_edit_event_key">EXTRA_EDIT_EVENT_KEY</string>
    <string name="label_event_date">Data do evento</string>
    <string name="label_dayweek_daymonth_month_year">%1$s., %2$d de %3$s. %4$d</string>
    <string name="label_hour_minute">%1$d:%2$d</string>
    <string name="label_update">Atualizar</string>
    <string name="extra_key_delete_event">EXTRA_KEY_DELETE_EVENT</string>
    <string name="label_delete_event">Deletar evento</string>
    <string name="label_permanent_action">Essa é uma ação permanente e não podera ser desfeita.</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_event_added">Evento adicionado</string>
    <string name="label_event_updated">Evento atualizado</string>
    <string name="label_add">Adicionar</string>
    <string name="label_info">Informações</string>
    <string name="label_current_year_plus">%1$d +</string>
    <string name="label_none">Nenhum</string>
    <string name="notification_content">Chegou o momento!</string>
    <string name="label_email">E-mail: simpleplus.dev@hotmail.com</string>
    <string name="content_description_send_email">Enviar email</string>
    <string name="dev_email">simpleplus.dev@hotmail.com</string>
    <string name="label_filter">Filtrar</string>
    <string name="label_hour">%1$d:%2$d</string>
    <string name="label_more">Mais</string>
    <string name="label_date">Data</string>
    <string name="label_time">Horário</string>

    <string name="label_week_day_month">%1$s, %2$d de %3$s</string>
    <string name="label_dayOfMonth_month_year">%1$d de %2$s de %3$d</string>
    <string name="label_periods">Períodos</string>
    <string name="content_desc_imageEventDetails">imagem com detalhes do evento salvo</string>
    <string name="label_day">dias</string>
    <string name="label_minutes">minutos</string>
    <string name="label_hours">horas</string>
    <string name="label_months">meses</string>
    <string name="label_years">anos</string>
    <string name="label_edit">Editar</string>
    <string name="label_time_remaining">Tempo faltando</string>
    <string name="label_expected_date">Data prevista</string>
    <string name="label_event">Evento</string>
    <string name="label_period_missing">%1$s faltando</string>
</resources>